# thalassocracy

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
client/: AGENTS.md  Cargo.toml
client/assets/: water_post.wgsl
client/assets/shaders/: water_post.wgsl
client/assets/shaders/volumetric_floodlights/: volumetric_cones.wgsl
client/src/: args.rs  debug_vis.rs  desync_metrics.rs  hud_controls.rs  hud_instruments.rs  input.rs  labels.rs  lib.rs  main.rs  net.rs  render_settings.rs  scene.rs  sim_pause.rs  volumetric_floodlights.md
client/src/hud_instruments/: ballast.rs  flow.rs  mod.rs
client/src/scene/: camera.rs  flow_field.rs  greybox.rs  light_bulb.rs  mod.rs  ore.rs  postprocess.rs  proctex.rs  setup.rs  submarine.rs  volumetric_cone_material.rs  volumetric_cone_material.wgsl  water.rs  water_post.wgsl  world.rs
client/src/scene/render/: mod.rs
client/src/scene/render/volumetric_floodlights/: cone_debug.wgsl  cone_volume_pass.wgsl  cones.rs  debug_material.rs  debug_modes.md  extract.rs  legacy.rs  mod.rs  pipeline.rs  render_node.rs  ui.rs  volumetric_cone_material.rs  volumetric_cone_material.wgsl  volumetric_floodlights.md
design/: COORDINATES_AND_CONVENTIONS.md  DESIGN_DOCUMENT.md  PHYSICS_DESIGN.md  PROTOTYPE_PLAN.md  SUB_INPUT_PIPELINE.md  VISUAL_FIDELITY.md
integration_tests/: Cargo.toml
integration_tests/src/: lib.rs
levels/: Cargo.toml
levels/src/: SUBPHYSICS_TUNING.md  builtins.rs  lib.rs  math.rs  spec.rs  sub_specs.rs  submarine_physics.rs
levels/src/submarine_physics/: dynamics.rs  flow.rs  mod.rs  terms.rs  types.rs  util.rs
levels/tests/: ballast_pitch.rs  pitch_ballast_effect.rs  yaw_rudder_conventions.rs  yaw_stability_tailflow.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml  config.toml
server/src/: app.rs  lib.rs  main.rs
server/tests/: physics_sideslip.rs
