[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_pbr",
    "bevy_sprite",
    "bevy_ui",
    "bevy_gizmos",
    "multi_threaded",
    "png",
    "jpeg",
    "exr",
    "tonemapping_luts",
    "default_font",
] }
bevy_renet = "2.0.0"
protocol = { path = "../protocol" }
levels = { path = "../levels" }
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
bevy-inspector-egui = { version = "0.33.1", optional = true }
bevy_egui = { version = "0.36.0", optional = true }
bytemuck = { version = "1", features = ["extern_crate_std"] }

[features]
default = ["windowing"]
windowing = ["bevy/bevy_winit", "bevy-inspector-egui", "bevy_egui"]
