[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
bevy_ecs = "0.16"
bevy_renet = "2.0.0"
bevy = { version = "0.16", default-features = false, features = ["multi_threaded"] }
protocol = { path = "../protocol" }
levels = { path = "../levels" }
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
